--- a/languages.toml
+++ b/languages.toml
@@ -4,15 +4,32 @@
 [[language]]
 name = "rust"
 
-[language.auto-pairs]
-'(' = ')'
-'{' = '}'
-'[' = ']'
-"'" = "'"
-'"' = '"'
-'`' = '`'
-'<' = '>' # added these last two
-'|' = '|' # pipes exclusive to rust: used for closures
+[language.debugger]
+command = "codelldb"
+name = "codelldb"
+port-arg = "--port {}"
+transport = "tcp"
+
+[[language.debugger.templates]]
+name = "binary"
+request = "launch"
+[[language.debugger.templates.completion]]
+completion = "filename"
+name = "binary"
+
+[language.debugger.templates.args]
+program = "{0}"
+runInTerminal = true
+
+# [language.auto-pairs]
+# '(' = ')'
+# '{' = '}'
+# '[' = ']'
+# "'" = "'"
+# '"' = '"'
+# '`' = '`'
+# '<' = '>' # added these last two
+# '|' = '|' # pipes exclusive to rust: used for closures
 
 [language-server.rust-analyzer.config.check]
 command = "clippy"
